fix visual bug on small smartphone screen

--- a/src/pages/Home/Projects/projects.styles.scss
+++ b/src/pages/Home/Projects/projects.styles.scss
@@ -109,7 +109,7 @@
     }
 
     .projects__container a {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
 
         &:hover {
             margin-right: 0;
