--- a/src/pages/Home/Sinopsis/sinopsis.styles.scss
+++ b/src/pages/Home/Sinopsis/sinopsis.styles.scss
@@ -33,4 +33,8 @@ $a-tags: "a, a:active, a:hover, a:visited";
     .info__container {
         font-size: 0.9rem;
     }
+
+    .info__text {
+        font-size: 0.75rem;
+    }
 }
